# tetris-battle

./: .gitignore  CHANGELOG.md  Dockerfile  README.md
.github/workflows/: build-push.yml
game-logic/src/: board.rs  lib.rs  piece.rs  scoring.rs
server/src/: api.rs  main.rs  room.rs
static/: app.js  game.html  i18n.js  index.html  style.css
tetris-battle/: .env.example  CHANGELOG.md  docker-compose.yml
tetris-battle/game-logic/: Cargo.toml
tetris-battle/game-logic/src/: garbage.rs  piece.rs
tetris-battle/server/: Cargo.toml
tetris-battle/server/src/: db.rs
tetris-battle/static/: i18n.js  index.html
